Página de produtos fazendo request pra api

--- a/src/components/CardProduto/CardProduto.css
+++ b/src/components/CardProduto/CardProduto.css
@@ -74,8 +74,7 @@
   font-weight: 900;
   color: #c92a2a;
   position: relative;
-
-  align-self: end;
+  width: 100%;
 }
 
 .price-container::after {
