--- a/src/pages/Home/DepartmentSession/DepartmentSession.css
+++ b/src/pages/Home/DepartmentSession/DepartmentSession.css
@@ -1,4 +1,3 @@
-
 .department-grid {
   height: 750px;
   display: grid;
@@ -38,4 +37,24 @@
   width: 80%;
   height: 80%;
   object-fit: contain;
+}
+
+
+
+@media (max-width: 1077px) {
+  .department-grid {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(4, 25%);
+  }
+}
+
+@media (max-width: 670px) {
+  .department-grid {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(8, 12.5%);
+  }
 }
