--- a/src/pages/Carrinho/CartProducts.css
+++ b/src/pages/Carrinho/CartProducts.css
@@ -7,8 +7,18 @@
   position: relative;
   margin-bottom: 54px;
   width: 100%;
+  position: relative;
 }
 
+.cart-products h2 {
+  height: 100%;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(128, 128, 128, 0.61);
+}
 /*Cart Header */
 .cart-header {
   height: 60px;
@@ -50,4 +60,17 @@
   padding: 0px 16px;
   display: flex;
   flex-direction: column;
+}
+
+.clear-cart-btn {
+  background-color: rgb(33, 67, 124);
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 17px;
+  position: absolute;
+  right: 0;
+  bottom: -45px;
+  cursor: pointer;
 }
