Página de cadastro criada em react

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -133,7 +133,7 @@ footer .parte2 .redesocial-container img:hover {
     border-bottom: 2px solid #0e264e;
   }
   
-  footer .parte1 .itens-footer-p1 ul li svg {
+  footer .parte1 .itens-footer-p1 ul li img {
     display: none;
   }
 
