--- a/src/pages/UserProfile/UserData.css
+++ b/src/pages/UserProfile/UserData.css
@@ -2,28 +2,41 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding-bottom: 120px;
 }
 
 .user-data {
   width: 100%;
-  padding-top: 84px;
+  padding-top: 72px;
+}
+.user-data form {
+  position: relative;
+
 }
 
-.user-page-input-box {
-  display: flex;
-;
-  align-items: flex-start;
-  flex-direction: column;
-  font-size: 16px;
-  margin-bottom: 24px;
-}
 
-.user-page-input-box input {
-  width: 100%;
-  margin-top: 6px;
-  padding: 10px;
+.user-data button  {
+  padding: 12px 32px;
+  font-size: 22px;
+  margin-top: 32px;
   border: none;
+  background-color: rgb(15, 72, 179);
   border-radius: 5px;
-  box-shadow: 1px 1px 6px #0000001c;
-  outline: none;
+  color: white;
+  -webkit-box-shadow: 0px 0px 18px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 18px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 18px -11px rgba(0, 0, 0, 0.75);
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+.user-data button:hover {
+  opacity: 0.95;
+}
+.user-data button img {
+  width: 24px;
+  margin-right: 8px;
+
 }
