--- a/src/pages/Cadastro/Cadastro.css
+++ b/src/pages/Cadastro/Cadastro.css
@@ -147,6 +147,29 @@
   background-color: rgba(255, 255, 255, 0.829);
 }
 
+.register-errors {
+  width: 70%;
+  margin: 0 auto;
+  margin-bottom: 24px;
+
+  margin-top: 48px;
+  text-align: left;
+  list-style:disc;
+
+  background-color: rgb(255, 222, 222);
+  padding: 16px;
+  padding-left: 32px;
+  border-radius: 5px;
+  display: none;
+}
+.register-errors.show {
+  display: block;
+}
+.register-errors li {
+  list-style-type: disc;
+  color: rgb(136, 0, 0);
+}
+
 @media screen and (max-width: 920px) {
 
   .register-form-container {
@@ -173,7 +196,4 @@
   }
 }
 
-pre {
-text-align: center;
-}
 
