--- a/src/pages/FinalizarPedido/FinalizarPedido.css
+++ b/src/pages/FinalizarPedido/FinalizarPedido.css
@@ -6,13 +6,14 @@
   row-gap: 24px;
   column-gap: 32px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+
   align-items: start;
 }
 
 .delivery-type {
-  grid-column: 1;
-  grid-row: 2;
+  grid-area: 1 / 2 / 2 / 3;
 }
 
 .finish-purchase-page-container {
@@ -27,7 +28,6 @@
   display: flex;
   align-items: center;
   gap: 8px;
-
 }
 .delivery-type legend {
   padding: 0 12px;
